backends/drm: suppress logging for direct scanout

BUG: 456089


(cherry picked from commit ef97158f9633fb1fc6489e540b273e533e861004)