src/backends/drm/egl_gbm_layer_surface.cpp
@@ -129,7 +129,11 @@ std::optional<std::tuple<std::shared_ptr<DrmFramebuffer>, QRegion>> EglGbmLayerS
     if (m_gpu == m_eglBackend->gpu()) {
         if (const auto buffer = m_gbmSurface->swapBuffers(damagedRegion)) {
             m_currentBuffer = buffer;
-            return std::tuple(DrmFramebuffer::createFramebuffer(buffer), damagedRegion);
+            auto ret = DrmFramebuffer::createFramebuffer(buffer);
+            if (!ret) {
+                qCWarning(KWIN_DRM, "Failed to create framebuffer for EglGbmLayerSurface: %s", strerror(errno));
+            }
+            return std::tuple(ret, damagedRegion);
         }
     } else {
         if (const auto gbmBuffer = m_gbmSurface->swapBuffers(damagedRegion)) {
@@ -282,7 +286,11 @@ std::shared_ptr<DrmFramebuffer> EglGbmLayerSurface::importDmabuf()
         qCWarning(KWIN_DRM, "failed to import gbm_bo for multi-gpu usage: %s", strerror(errno));
         return nullptr;
     }
-    return DrmFramebuffer::createFramebuffer(imported);
+    const auto ret = DrmFramebuffer::createFramebuffer(imported);
+    if (!ret) {
+        qCWarning(KWIN_DRM, "Failed to create framebuffer for multi-gpu: %s", strerror(errno));
+    }
+    return ret;
 }
 
 std::shared_ptr<DrmFramebuffer> EglGbmLayerSurface::importWithCpu()
@@ -313,7 +321,11 @@ std::shared_ptr<DrmFramebuffer> EglGbmLayerSurface::importWithCpu()
     if (!memcpy(importBuffer->data(), m_currentBuffer->mappedData(), importBuffer->size().height() * importBuffer->strides()[0])) {
         return nullptr;
     }
-    return DrmFramebuffer::createFramebuffer(importBuffer);
+    const auto ret = DrmFramebuffer::createFramebuffer(importBuffer);
+    if (!ret) {
+        qCWarning(KWIN_DRM, "Failed to create framebuffer for CPU import: %s", strerror(errno));
+    }
+    return ret;
 }
 
 bool EglGbmLayerSurface::doesSwapchainFit(DumbSwapchain *swapchain) const
@@ -364,7 +376,11 @@ std::shared_ptr<DrmFramebuffer> EglGbmLayerSurface::renderTestBuffer(const QSize
                 return nullptr;
             }
         }
-        return DrmFramebuffer::createFramebuffer(m_currentBuffer);
+        const auto ret = DrmFramebuffer::createFramebuffer(m_currentBuffer);
+        if (!ret) {
+            qCWarning(KWIN_DRM, "Failed to create framebuffer for testing: %s", strerror(errno));
+        }
+        return ret;
     } else {
         return nullptr;
     }
